# drfwithdatabase

./: .gitignore  README.md  manage.py  pyproject.toml
drfwithdatabase/: celery.py  settings.py  urls.py  wsgi.py
template/: test_toturials.html  tutorials.js
tracking_api/: admin.py  apps.py  serializers.py  tasks.py  urls.py  views.py
tracking_api/migrations/: 0001_initial.py
tutorials/: models.py  serializers.py  urls.py  views.py
tutorials/migrations/: 0001_initial.py
tutorials_redis/: apps.py  urls.py  views.py
