[tool.poetry]
name = "drf-with-database"
version = "0.1.0"
description = "DRF with database"
authors = ["YuZhanHuang <bigjoe1992111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "2.1.15"
djangorestframework = "3.11.0"
PyMySQL = "0.9.3"
django-cors-headers = "3.2.1"
django-environ = "^0.8.1"
django-redis = "4.4.3"
redis = "^4.0.1"
hiredis = "^2.0.0"
drf-yasg = "1.16.1"
PyYAML = "^6.0"
celery = "5.1"
beautifulsoup4 = "^4.10.0"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
